# rust-webapi-mysql

./: .env  Cargo.toml  README.md  user.rs
client/: package-lock.json  package.json
client/src/: App.css  App.js  index.js
client/src/components/: About.js  Contactinfo.js  Footer.js  Header.js  Home.js  Login.js  Profile.js  Registration.js
src/: login.rs  main.rs  user.rs
src/auth/: Cargo.toml
src/auth/src/: .env  db.rs  error.rs  jwt.rs  lib.rs
