[package]
name = "rust-webapi-mysql"
authors = ["Reynald Marquez-Gragasin <reynald88@yahoo.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-webapi-mysql"
path = "src/main.rs"

[lib]
name = "auth"
path = "src/auth/src/lib.rs"

[dependencies]
async-std = "1.12.0"
sqlx = {version = "0.7", default-features = false, features = ["runtime-async-std", "macros", "mysql", "time"]}
time = {version = "0.3.22", default-features = false, features = ["formatting", "macros"]}
bcrypt = "*"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "^0.4.13", features= ["serde"] }
futures = "0.3"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]