[package]
name = "rust-webapi-mysql"
authors = ["Reynald Marquez-Gragasin <reynald88@yahoo.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-webapi-mysql"
path = "src/main.rs"

[lib]
name = "auth"
path = "src/auth/src/lib.rs"

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.7.0"
# actix-multipart = "0.7.2"
actix-multipart = "0.5.0"
actix-http = "3.9.0"
actix-files = "0.6.6"
async-std = "1.12.0"
sqlx = {version = "0.7", default-features = false, features = ["runtime-async-std", "macros", "mysql", "time"]}
time = {version = "0.3.22", default-features = false, features = ["formatting", "macros"]}
bcrypt = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "^0.4.13", features= ["serde"] }
# tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
tokio = { version = "1.24.1", features = ["fs"] }
futures = "0.3"
jsonwebtoken = "=9.3.0"
thiserror = "1.0"
dotenv = "0.15.0"
warp = "0.3.7"
bson = "2.11.0"
uuid = "1.10.0"
sanitize-filename = "0.5.0"
# futures-util = "0.3.30"
futures-util = "0.3.25"
# mime = "0.3.17"
mime = "0.3.16"
image = "0.25.2"
